--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: emacs-lisp
 
 env:
   matrix:
+    - EMACS=emacs23
     - EMACS=emacs24
     - EMACS=emacs-snapshot
 
@@ -10,6 +11,11 @@ matrix:
     - env: EMACS=emacs-snapshot
 
 install:
+  - if [ "$EMACS" = "emacs23" ]; then
+        sudo apt-get -qq update &&
+        sudo apt-get -qq -f install &&
+        sudo apt-get -qq install emacs23-gtk emacs23-el;
+    fi
   - if [ "$EMACS" = "emacs24" ]; then
         sudo add-apt-repository -y ppa:cassou/emacs &&
         sudo apt-get -qq update &&
